@@ -7,6 +7,8 @@ Changelog
 - LDAP import: groupid may be in 'cn' or 'fullname' attribute.
   Handle both cases gracefully.
   [lgraf]
+- Updated i18n-build with the option to build only one subpackage.
+  [lknoepfel]
 
 
 3.1.1 (2013-10-23)
